--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sonner": "^1.7.3"
   },
   "devDependencies": {
     "@types/node": "22.10.2",
