--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.1",
+    "@types/jsdom": "^21.1.7",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "geist": "^1.3.1",
+    "jsdom": "^26.0.0",
     "lucide-react": "^0.468.0",
     "next": "latest",
     "next-themes": "^0.4.3",
@@ -26,13 +28,17 @@
     "sonner": "^1.7.3"
   },
   "devDependencies": {
-    "@types/node": "22.10.2",
-    "@types/react": "^18.2.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@types/node": "^22.10.2",
+    "@types/react": "^18.3.18",
     "@types/react-dom": "^18.2.0",
+    "@types/uuid": "^10.0.0",
+    "dotenv": "^16.4.7",
     "postcss": "8.4.49",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.7.2"
+    "typescript": "5.7.2",
+    "uuid": "^11.0.5"
   }
 }
